<resources>
    <string name="app_name">CubScout</string>
    <string name="match_submit_activity_label">Match report Form</string>
    <string name="individual_report_activity_label">Search for specific teams</string>
    <string name="report_list_activity_label">Search teams by performance</string>
    <string name="launch_match_submit_activity_text">Scout a match</string>
    <string name="launch_view_match_report_text">View top performers</string>
    <string name="launch_view_individual_report_activity_text">View report on an individual team</string>
    <string name="match_submit_button_text">Submit</string>
    <string name="team_search_default_text">Please enter a team number</string>
    <string name="robot_search_button_text">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="avg_high_goal_made_label_text">Avg. high goals made\n(per match)</string>
    <string name="avg_low_goal_made_label_text">Avg. low goals made\n(per match)</string>
    <string name="high_goal_accuracy_label_text">High goal accuracy</string>
    <string name="low_goal_accuracy_label_text">Low goal accuracy</string>
    <string name="defense_rating_label_text">Defense Rating</string>
    <string name="average_total_crossing_label_text">Avg. obstacles crossed\n(per match)</string>
    <string name="first_obstacle_preference_label_text">1</string>
    <string name="obstacle_preference_header_text">Most commonly crossed obstacles</string>
    <string name="second_obstacle_preference_label_text">2</string>
    <string name="third_obstacle_preference_label_text">3</string>
    <string name="sort_by_first_label_text">Sort first by</string>
    <string name="sort_by_second_label_text">Then by</string>
    <string name="sort_by_last_label_text">Finally by</string>
    <string name="report_list_sort_button_text">Go</string>
    <string name="checkbox_message_field_label_text">Message by null checkbox</string>
    <string name="select_game_spinner_label_text">Select Game</string>
    <string name="select_game_type_label_text">Game type</string>
    <string name="no_games_available_for_category_text">No games available for that category</string>
    <string name="search_events_hint">Search Events</string>
    <string name="game_tab_label_text">Games</string>
    <string name="event_tab_label_text">Events</string>
    <string name="robot_tab_label_text">Robots</string>
    <string name="launch_admin_activity_button_text">Admin tools</string>
    <string name="scorecard_design_submit_url">https://cubscout.robocubs4205.local</string>
    <string name="no_games_text">No games have been created yet.</string>
    <string name="edit_button_text">EDIT</string>
    <string name="game_name_field_label">Name</string>
    <string name="null_when_label_text">Null When</string>
    <string name="match_number_label">Match number</string>

    <string-array name="defense_ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="sortable_fields">
        <item>None</item>
        <item>High Goals per Match</item>
        <item>Low Goals per Match</item>
        <item>Obstacle Crossings</item>
        <item>Defense Rating</item>
        <item>High Goal Accuracy</item>
        <item>Low Goal Accuracy</item>
    </string-array>
    <string-array name="game_types">
        <item>FRC</item>
        <item>FTC</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="robot_number_label">Robot Number</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_header">lorem ipsum dolor sit amet</string>
    <string name="did_not_perform">Did not perform this activity</string>
    <string name="sort_by">Sort by</string>
</resources>
