<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:application="com.robocubs4205.cubscout.MainFragment">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="LaunchMatchSubmitActivity"
        android:text="@string/launch_match_submit_activity_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="LaunchReportListActivity"
        android:text="@string/launch_view_match_report_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="LaunchIndividualReportActivity"
        android:text="@string/launch_view_individual_report_activity_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="LaunchAdminActivity"
        android:text="@string/launch_admin_activity_button_text"
        />

</LinearLayout>
